--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
             opacity: 0;
             animation: cardSlideUp 0.8s ease-out forwards;
             border: 1px solid rgba(0,0,0,0.05);
+            display: flex;
+            flex-direction: column;
+            min-height: 450px;
         }
 
         /* Staggered animation delays */
@@ -291,30 +294,58 @@
             border: 2px solid var(--accent);
         }
 
-        /* Service card images - REMOVED BOUNCING ANIMATION */
+        /* Service card image container */
+        .service-image-container {
+            width: 100px;
+            height: 100px;
+            margin: 0 auto 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background: rgba(0,0,0,0.02);
+            overflow: hidden;
+        }
+
+        /* Service card images - PROPERLY ALIGNED */
         .service-card img {
             width: 80px;
             height: 80px;
-            margin-bottom: 25px;
+            object-fit: contain;
+            object-position: center;
             transition: all 0.5s var(--transition-smooth);
+            border-radius: 8px;
         }
 
         .service-card:hover img {
-            transform: scale(1.3) rotate(10deg) translateY(-10px);
-            filter: brightness(1.2) drop-shadow(0 10px 20px rgba(0,0,0,0.3));
+            transform: scale(1.2) rotate(5deg);
+            filter: brightness(1.1) drop-shadow(0 8px 16px rgba(0,0,0,0.2));
+        }
+
+        /* Service content wrapper */
+        .service-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         /* Glowing text effects */
         .service-card h3 {
-            font-size: 22px;
+            font-size: 20px;
             font-weight: 700;
             margin-bottom: 20px;
             transition: all 0.4s ease;
+            line-height: 1.3;
+            min-height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .service-card:hover h3 {
-            transform: scale(1.1);
-            text-shadow: 0 0 20px rgba(0,0,0,0.3);
+            transform: scale(1.05);
+            text-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
 
         .call-text {
@@ -339,17 +370,17 @@
             justify-content: center;
             border: 3px solid transparent;
             border-radius: 20px;
-            padding: 15px 20px;
-            font-size: 26px;
+            padding: 12px 15px;
             font-weight: 700;
             color: #000;
             background-color: #f5f5f5;
             width: 100%;
             max-width: 280px;
-            margin: 0 auto 25px;
+            margin: 0 auto 20px;
             transition: all 0.4s ease;
             position: relative;
             overflow: hidden;
+            min-height: 55px;
         }
 
         .call-box::before {
@@ -399,8 +430,8 @@
 
         /* Animated phone icons */
         .phone-icon {
-            font-size: 22px;
-            margin-right: 10px;
+            font-size: 20px;
+            margin-right: 8px;
             color: deeppink;
             transition: all 0.4s ease;
             animation: phoneRing 3s ease-in-out infinite;
@@ -408,19 +439,27 @@
 
         @keyframes phoneRing {
             0%, 10%, 20% { transform: rotate(0deg); }
-            5%, 15% { transform: rotate(-10deg); }
+            5%, 15% { transform: rotate(-8deg); }
             100% { transform: rotate(0deg); }
         }
 
         .service-card:hover .phone-icon {
             color: var(--accent);
-            transform: scale(1.3) rotate(15deg);
+            transform: scale(1.2) rotate(12deg);
             animation: phoneRingFast 0.5s ease-in-out infinite;
         }
 
         @keyframes phoneRingFast {
-            0%, 50%, 100% { transform: scale(1.3) rotate(15deg); }
-            25%, 75% { transform: scale(1.4) rotate(25deg); }
+            0%, 50%, 100% { transform: scale(1.2) rotate(12deg); }
+            25%, 75% { transform: scale(1.3) rotate(20deg); }
+        }
+
+        /* Phone number styling */
+        .phone-number {
+            font-size: 18px;
+            font-weight: 700;
+            margin: 0;
+            color: inherit;
         }
 
         /* Enhanced copy button with ripple effect */
@@ -432,11 +471,12 @@
             border-radius: 15px;
             padding: 12px 18px;
             cursor: pointer;
-            font-size: 18px;
+            font-size: 16px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
+            font-weight: 600;
         }
 
         .copy-btn:hover {
@@ -528,10 +568,6 @@
             animation: textShimmer 2s ease-in-out infinite;
         }
 
-        #p1{
-            font-size: medium;
-        }
-
         @keyframes textShimmer {
             0%, 100% { text-shadow: 0 0 5px rgba(255,215,0,0.5); }
             50% { text-shadow: 0 0 20px rgba(255,215,0,0.8); }
@@ -549,6 +585,7 @@
             .service-card {
                 max-width: 400px;
                 padding: 30px 20px;
+                min-height: 400px;
             }
             .company-logo {
                 max-width: 120px;
@@ -556,6 +593,41 @@
             }
             .service-card:hover {
                 transform: translateY(-10px) scale(1.02);
+            }
+            .service-card h3 {
+                font-size: 18px;
+                min-height: 50px;
+            }
+            .service-image-container {
+                width: 80px;
+                height: 80px;
+            }
+            .service-card img {
+                width: 65px;
+                height: 65px;
+            }
+            .call-box {
+                max-width: 260px;
+                padding: 10px 12px;
+            }
+            .phone-number {
+                font-size: 16px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .service-card {
+                max-width: 320px;
+                padding: 25px 15px;
+            }
+            .service-card h3 {
+                font-size: 16px;
+            }
+            .call-box {
+                max-width: 240px;
+            }
+            .phone-number {
+                font-size: 15px;
             }
         }
 
@@ -584,7 +656,7 @@
             <div class="logo-container">
                 <img src="./logo.jpg" alt="Panvel Industrial Fasteners Logo" class="company-logo">
             </div>
-            <h1 class="company-name">PANVEL Industrial FASTENERS PVT LTD</h1>
+            <h1 class="company-name">PANVEL INDUSTRIAL FASTENERS PVT LTD</h1>
             <div class="address-box">
                 <p class="address">
                     📍 PLOT NO. 29 TO 33 & 37, JAWAHAR COOPERATIVE INDUSTRIAL ESTATE<br>
@@ -601,37 +673,56 @@
                     
                     <!-- Card 1 -->
                     <div class="service-card" data-service="hoarding">
-                        <img src="https://em-content.zobj.net/source/microsoft-teams/363/loudspeaker_1f4e2.png" alt="Hoarding">
-                        <h3 style="color:#007bff;">HOARDING<br>BOOKING</h3>
-                        <p class="call-text">CALL NOW</p>
-                        <div class="call-box hoarding">
-                            <span class="phone-icon">📞</span><p id="p1">+91 9221472361</p>
+                        <div class="service-image-container">
+                            <img src="./hording.jpg" alt="Hoarding Advertisement" loading="lazy">
                         </div>
-                        <button class="copy-btn" data-phone="09221472361">📋 Copy</button>
+                        <div class="service-content">
+                            <h3 style="color:#007bff;">HOARDING<br>ADVERTISEMENT BOOKING</h3>
+                            <div>
+                                <p class="call-text">CALL NOW</p>
+                                <div class="call-box hoarding">
+                                    <span class="phone-icon">📞</span>
+                                    <p class="phone-number">+91 9221472361</p>
+                                </div>
+                                <button class="copy-btn" data-phone="09221472361">📋 Copy Number</button>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Card 2 -->
                     <div class="service-card" data-service="lubricants">
-                        <img src="https://em-content.zobj.net/source/microsoft-teams/363/oil-drum_1f6e2-fe0f.png" alt="Lubricants">
-                        <h3 style="color:#ff6600;">LUBRICANTS</h3>
-                        <br/>
-                        <br/>
-                        <p class="call-text">CALL NOW</p>
-                        <div class="call-box lubricants">
-                            <span class="phone-icon">📞</span><p id="p1">+91 8693001001</p>
+                        <div class="service-image-container">
+                            <img src="./lubricants.jpg" alt="HPCL Branded Lubricants" loading="lazy">
                         </div>
-                        <button class="copy-btn" data-phone="08693001001">📋 Copy</button>
+                        <div class="service-content">
+                            <h3 style="color:#ff6600;">HPCL BRANDED<br>LUBRICANTS</h3>
+                            <div>
+                                <p class="call-text">CALL NOW</p>
+                                <div class="call-box lubricants">
+                                    <span class="phone-icon">📞</span>
+                                    <p class="phone-number">+91 8693001001</p>
+                                </div>
+                                <button class="copy-btn" data-phone="08693001001">📋 Copy Number</button>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Card 3 -->
                     <div class="service-card" data-service="batteries">
-                        <img src="https://em-content.zobj.net/source/microsoft-teams/363/battery_1f50b.png" alt="Batteries">
-                        <h3 style="color:#28a745;">BATTERIES &<br>UPS</h3>
-                        <p class="call-text">CALL NOW</p>
-                        <div class="call-box batteries">
-                            <span class="phone-icon">📞</span><p id="p1">+91 9223397736</p>
+                        <div class="service-image-container">
+                            <img src="./batries.jpg" alt="Exide Branded Batteries" loading="lazy">
                         </div>
-                        <button class="copy-btn" data-phone="09223397736">📋 Copy</button>
+                        <div class="service-content">
+                            <h3 style="color:#28a745;">EXIDE BRANDED<br>BATTERIES & UPS</h3>
+                            <div>
+                                <p class="call-text">CALL NOW</p>
+                                <div class="call-box batteries">
+                                    <span class="phone-icon">📞</span>
+                                    <p class="phone-number">+91 9223397736</p>
+                                </div>
+                                <button class="copy-btn" data-phone="09223397736">📋 Copy Number</button>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
@@ -665,7 +756,7 @@
             // Copy to clipboard
             if (navigator.clipboard) {
                 navigator.clipboard.writeText(phoneNumber).then(() => {
-                    showNotification('Phone number copied: ' + phoneNumber);
+                    showNotification('Phone number copied: +91 ' + phoneNumber);
                 }).catch(() => {
                     fallbackCopy(phoneNumber);
                 });
@@ -681,7 +772,7 @@
             textArea.select();
             try {
                 document.execCommand('copy');
-                showNotification('Phone number copied: ' + phoneNumber);
+                showNotification('Phone number copied: +91 ' + phoneNumber);
             } catch (err) {
                 showNotification('Unable to copy phone number');
             }
